--- a/app.json
+++ b/app.json
@@ -2,6 +2,7 @@
   "pages": [
     "pages/index/index",
     "pages/location/location",
+    "pages/location-detail/location",
     "pages/setting/setting"
   ],
   "window": {
