修改点击效果、地图下方信息

--- a/app.json
+++ b/app.json
@@ -3,7 +3,7 @@
     "pages/index/index",
     "pages/location/location",
     "pages/location-detail/location",
-    "pages/setting/setting"
+    "pages/about/about"
   ],
   "window": {
     "backgroundTextStyle": "light",
