--- a/app.json
+++ b/app.json
@@ -1,9 +1,6 @@
 {
   "pages": [
-    "pages/index/index",
-    "pages/location/location",
-    "pages/location-detail/location",
-    "pages/author/author"
+    "pages/index/index"
   ],
   "window": {
     "backgroundTextStyle": "light",
