--- a/app.json
+++ b/app.json
@@ -12,7 +12,13 @@
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#262930",
     "navigationBarTitleText": "小明带你找厕所",
-    "navigationBarTextStyle": "#fff",
+    "navigationBarTextStyle": "white",
     "enablePullDownRefresh": true
-  }
+  },
+  "permission": {
+    "scope.userLocation": {
+      "desc": "你的位置信息将用于小程序位置接口的效果展示"
+    }
+  },
+  "sitemapLocation": "sitemap.json"
 }
